Add research on wildfires

--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,21 @@ enableEmoji = true
 # disqusShortname = "yourdiscussshortname"
 builddrafts = true
 
+
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        enable = true
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
+          inline = [['\(', '\)']]
+
+
 [params]
 author = "Gabriel Cruz"
+math = true
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Gabe's personal website"
 keywords = "blog,developer,personal"
